--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header class="topup">
-        <a href="/home.html">Home</a>
+        <a href="/index.html">Home</a>
         <a href="/work.html">Works</a>
         <a href="/blog.html">Blog</a>
     </header>
