--- a/blog.html
+++ b/blog.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <header class="topup">
-        <a href="/home.html">Home</a>
+        <a href="/index.html">Home</a>
         <a href="/work.html">Works</a>
         <a href="/blog.html">Blog</a>
     </header>
