--- a/blog.html
+++ b/blog.html
@@ -9,9 +9,9 @@
     </head>
     <body>
         <header class="topup">
-        <a href="/index.html">Home</a>
-        <a href="/work.html">Works</a>
-        <a href="/blog.html">Blog</a>
+        <a href="./index.html">Home</a>
+        <a href="./work.html">Works</a>
+        <a href="./blog.html">Blog</a>
     </header>
      <div class="worktop">Blog</div>
         <div class="containerblog">
