--- a/work.html
+++ b/work.html
@@ -9,14 +9,14 @@
 </head>
 <body>
     <header class="topup">
-        <a href="/index.html">Home</a>
-        <a href="/work.html">Works</a>
-        <a href="/blog.html">Blog</a>
+        <a href="./index.html">Home</a>
+        <a href="./work.html">Works</a>
+        <a href="./blog.html">Blog</a>
     </header>
      <div class="worktop">Work</div>
     <div class="workbelow">
     <div class="work1">
-        <img src="/Image/work-1.png" alt="">
+        <img src="./Image/work-1.png" alt="">
         <div class="workdesign">
         <div style="font-size: larger;font-weight: bolder;">Designing Dashboards</div>
                 <div> 2020 Dashboard</div>
@@ -24,7 +24,7 @@
             </div>
             </div>
     <div class="work2">
-        <img src="/Image/work-2.png" alt="">
+        <img src="./Image/work-2.png" alt="">
         <div>
         <div style="font-size: larger;font-weight: bolder;">Vibrant Portraits of 2020</div>
                 <div>2018 Illustration</div>
@@ -32,7 +32,7 @@
         </div>
             </div>
     <div class="work3">
-        <img src="Image/work-3.png" alt="">
+        <img src="./Image/work-3.png" alt="">
         <div>
         <div style="font-size: larger;font-weight: bolder;">36 Days of Malayalam type</div>
                 <div>2018 Typography</div>
