--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <header class="topup">
-        <a href="/index.html">Home</a>
-        <a href="/work.html">Works</a>
-        <a href="/blog.html">Blog</a>
+        <a href="./index.html">Home</a>
+        <a href="./work.html">Works</a>
+        <a href="./blog.html">Blog</a>
     </header>
     <div class="container1">
         <div class="topleft">
@@ -21,7 +21,7 @@
              Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</div>
         <input class="inputDS" type="submit" value="Download Resume">   
         </div>
-        <img class="profileimage" src="/Image/profile.png" alt="">
+        <img class="profileimage" src="./Image/profile.png" alt="">
     </div>
     <div class="container2">
         <div class="topcontainer2">
@@ -45,7 +45,7 @@
     <div class="worktop">Feature works</div>
     <div class="workbelow">
     <div class="work1">
-        <img src="/Image/work-1.png" alt="">
+        <img src="./Image/work-1.png" alt="">
         <div class="workdesign">
         <div style="font-size: larger;font-weight: bolder;">Designing Dashboards</div>
                 <div> 2020 Dashboard</div>
@@ -53,7 +53,7 @@
             </div>
             </div>
     <div class="work2">
-        <img src="/Image/work-2.png" alt="">
+        <img src="./Image/work-2.png" alt="">
         <div>
         <div style="font-size: larger;font-weight: bolder;">Vibrant Portraits of 2020</div>
                 <div>2018 Illustration</div>
@@ -61,7 +61,7 @@
         </div>
             </div>
     <div class="work3">
-        <img src="Image/work-3.png" alt="">
+        <img src="./Image/work-3.png" alt="">
         <div>
         <div style="font-size: larger;font-weight: bolder;">36 Days of Malayalam type</div>
                 <div>2018 Typography</div>
